Fix image/drag container z-index and remove active line on esc key

--- a/src/app/components/board/styles/Board.css
+++ b/src/app/components/board/styles/Board.css
@@ -32,6 +32,7 @@
   background-image: url('../../../../images/de_inferno.jpg');
   background-repeat: no-repeat;
   background-size: contain;
+  z-index: -2;
 }
 
 .paths {
